--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Variabes */
 $orange: #ffa600;
 $green: #c1d72e;
@@ -8,190 +7,174 @@ $white: #fff;
 $base-color:$green ;
 
 
-.wrappper{
-  width:100%;
-  margin:0 auto;
-}
+.wrappper {
+  width: 100%;
+  margin: 0 auto;
+ }
 
 /* Mixin's */
-
 @mixin transition {
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-}
+ }
 
-@mixin clear {
-  &:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-}
+@mixin clear {&:after}
 
- @mixin box-size {
+{}
+
+@mixin box-size {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+ }
 
- @mixin transition {
+@mixin transition {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-}
+ }
 
 @mixin fade {
   -moz-transition: all 1s ease-in;
-  -moz-transition:all 0.3s ease-in-out;
-  -webkit-transition:all 0.3s ease-in-out;
-}
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+ }
 
 @mixin opacity {
-  opacity:0.4;
-  filter:alpha(opacity=40);
+  opacity: 0.4;
+  filter: alpha(opacity=40);
   @include fade;
-}
+ }
 
 @mixin corners ($radius) {
   -moz-border-radius: $radius;
   -webkit-border-radius: $radius;
   border-radius: $radius;
   -khtml-border-radius: $radius;
-}
+ }
 
 body {
   background-image: url("http://www.militaryboyzcomedy.com/miscimages/stage.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  color:white;
-  height:100%;
-  text-align:center;
-  font-size:18px;
-}
+  color: white;
+  height: 100%;
+  text-align: center;
+  font-size: 14px;
+ }
 
-
-
-canvas{
-  color:$white;
+canvas {
+  color: $white;
   border: $white dashed 2px;
-  padding:15px;
-}
+  padding: 15px;
+ }
 
 h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    text-transform: uppercase;
-   margin:5px 0;
-}
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin: 5px 0;
+ }
 
 h1 {
-    font-size: 6em;
-    font-family: 'Old Standard TT', serif;
-    color: white
-    ;
-}
+  font-size: 8em;
+  font-family: 'Old Standard TT', serif;
+  color: white
+  padding: 0;
+  margin: 0;
+  ;
+ }
 
-h2 {
-    font-size: 1.6em;
-}
+h2 {font-size: 1.6em;}
 
-p{
-  font-size: 1.6em;
-}
+p {font-size: 1.6em;}
 
 #alphabet {
   @include clear;
-  margin:15px auto;
-  padding:0;
-  max-width:900px;
-}
+  margin: 15px auto;
+  padding: 0;
+  max-width: 900px;
+ }
 
-#alphabet li {
-  float:left;
-  margin: 0 10px 10px 0;
-  list-style:none;
-  width:35px;
-  height:30px;
-  padding-top:10px;
-  background:$white;
-  color:$base-color;
-  cursor:pointer;
-  @include corners(5px);
-  border: solid 1px $white;
-
-    &:hover{
-      background:$base-color;
-      border: solid 1px $white;
-      color:$white;
-    }
-}
+  #alphabet li {
+    float: left;
+    margin: 0 10px 10px 0;
+    list-style: none;
+    width: 35px;
+    height: 30px;
+    padding-top: 10px;
+    background: $white;
+    color: $base-color;
+    cursor: pointer;
+    @include corners(5px);
+    border: solid 1px $white;
+    &:hover
+   }
 
 #my-word {
   margin: 0;
   display: block;
-  padding: 0;
-  display:block;
-}
+  padding: 15;
+  display: block;
+ }
 
-#my-word li {
-  position: relative;
-  list-style: none;
-  margin: 0;
-  display: inline-block;
-  padding: 0 10px;
-  font-size:1.6em;
-}
+  #my-word li {
+    position: relative;
+    list-style: none;
+    margin: 0;
+    display: inline-block;
+    padding: 0 15px;
+    font-size: 1.6em;
+   }
 
 .active {
   @include opacity;
-  cursor:default;
+  cursor: default;
+  &:hover
+ }
 
-  &:hover{
-      @include fade;
-      @include opacity;
-    }
-}
+{}
 
-#mylives{
-  font-size:1.6em;
-  text-align:center;
-  display:block;
-}
+#mylives {
+  font-size: 1.6em;
+  text-align: center;
+  display: block;
+ }
 
-button{
+button {
   @include corners (5px);
-  background:$base-color;
-  color:$white;
+  background: $base-color;
+  color: $white;
   border: solid 1px $white;
-  text-decoration:none;
-  cursor:pointer;
-  font-size:1.2em;
-  padding:18px 10px;
-  width:180px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 18px 10px;
+  width: 180px;
   margin: 10px;
   outline: none;
+  &:hover
+ }
 
+{}
 
-    &:hover{
-      @include transition;
-      background:$white;
-      border: solid 1px $white;
-      color:$base-color;
-    }
-}
+@media (max-width: 767px) {#alphabet}
 
-@media (max-width: 767px) {
-  #alphabet {
-  padding:0 0 0 15px;
-}
-  }
+{}
 
-  @media (max-width: 480px) {
-  #alphabet {
-  padding:0 0 0 25px;
-}
-  }
+@media (max-width: 480px) {#alphabet}
+
+{}
+
+#categories-list {
+    cursor:pointer;
+    display:inline-block;
+    position:relative;
+    font:normal 15px/22px Arial, Sans-Serif;
+    color:black;
+    border:1px solid #ccc;
+
